--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,28 +1,24 @@
-<h1> Articles listing page </h1>
+<h1 class="text-center mt-6"> Listing all articles </h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th colspan="3">Actions</th>
-    </tr>
-  </thead>
-
-  <body>
+<div class="container">
     <% @articles.each do |article| %>
-      <tr>
-        <td><%= article.title %></td>
-        <td><%= article.description %></td>
-        <td><%= link_to 'View', article_path(article) %></td>
-        <td><%= link_to 'Edit', edit_article_path(article) %></td>
-        <td><%= link_to 'Delete', article_path(article), method: :delete, data: { confirm: "Are you sure?"} %></td>
-      </tr>
+      <div class="row justify-content-md-center">
+        <div class="col-8 mt-4">
+          <div class="card text-center shadow mb-5 bg-white rounded">
+            <h5 class="card-header font-italic">by Dhara Panchal</h5>
+            <div class="card-body">
+              <h5 class="card-title"><%= link_to article.title, article_path(article), class: "text-success" %></h5>
+              <p class="card-text"><%= truncate(article.description, length:100) %></p>
+              <%= link_to 'View', article_path(article), class: "btn btn-outline-success" %>
+              <%= link_to 'Edit', edit_article_path(article), class: "btn btn-outline-info" %>
+              <%= link_to 'Delete', article_path(article), method: :delete, data: { confirm: "Are you sure?"}, class: "btn btn-outline-danger" %>
+            </div>
+          </div>
+        </div>
+      </div>
     <% end %>
+</div>
 
-  </body>
-
-</table>
 
 <p>
   <%= link_to 'Create a new article', new_article_path %>
