--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,8 +1,17 @@
-<h1>Showing article details</h1>
+<h2 class="text-center mt-6"> Article View </h2>
 
-  <p><strong>Title: </strong><%= @article.title %></p>
-  <p><strong>Description: </strong><%= @article.description %></p>
-
-  <%= link_to 'Edit', edit_article_path(@article) %> |
-  <%= link_to 'Delete' , article_path(@article), method: :delete, data: { confirm: "Are you sure?"} %> |
-    <%= link_to 'Show all articles', articles_path %>
+<div class="container">
+    <div class="row justify-content-md-center">
+      <div class="col-8 mt-4">
+        <div class="card text-center shadow mb-5 bg-white rounded">
+          <h5 class="card-header font-italic">by Dhara Panchal</h5>
+          <div class="card-body">
+            <h5 class="card-title"><%= @article.title %></h5>
+            <p class="card-text"><%= simple_format(@article.description) %></p>
+            <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-outline-info" %>
+            <%= link_to 'Delete', article_path(@article), method: :delete, data: { confirm: "Are you sure?"}, class: "btn btn-outline-danger" %>
+          </div>
+        </div>
+      </div>
+    </div>
+</div>
