--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -25,7 +25,7 @@
       </div>
 
       <div class="form-group row justify-content-center">
-        <%= f.submit "Sign up", class:"btn btn-outline-light btn-lg" %>
+        <%= f.submit(@user.new_record? ? "Sign up" : "Update account", class:"btn btn-outline-light btn-lg" )  %>
       </div>
     </div>
     <%= link_to '[ Cancel and return to articles listing ]', articles_path, class:"text-dark" %>
