--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,7 +4,10 @@
     <div class="row justify-content-md-center">
       <div class="col-8 mt-4">
         <div class="card text-center shadow mb-5 bg-white rounded">
-          <h5 class="card-header font-italic"><%= @article.user.username %></h5>
+          <h5 class="card-header font-italic">
+            <%= @article.user.username %>
+            <%= link_to gravatar_for(@article.user, size: 200), user_path(@article.user) %>
+          </h5>
           <div class="card-body">
             <h5 class="card-title"><%= @article.title %></h5>
             <p class="card-text"><%= simple_format(@article.description) %></p>
