--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,8 +1,11 @@
 <h1 class="text-center mt-6"> Listing all articles </h1>
 
-<%= render 'article' %>
+  <div class="apple_pagination">
+    <%= will_paginate @articles, :container => false %>
+  </div>
 
+  <%= render 'article' %>
 
-<p>
-  <%= link_to 'Create a new article', new_article_path %>
-</p>
+  <div class="apple_pagination mb-4">
+    <%= will_paginate @articles, :container => false %>
+  </div>
