--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,9 @@
 <h1 class="text-center mt-4"><%= @user.username %>'s profile </h1>
 
+<div class="apple_pagination">
+  <%= will_paginate @articles, :container => false %>
+</div>
+
 <%= gravatar_for @user, size: 200 %>
 
 <div class="text-center mt-4">
@@ -8,3 +12,7 @@
 <h3 class="text-center mt-4">Articles </h3>
 
 <%= render 'articles/article' %>
+
+<div class="apple_pagination mb-4">
+  <%= will_paginate @articles, :container => false %>
+</div>
