--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -11,8 +11,10 @@
           <div class="card-body">
             <h5 class="card-title"><%= @article.title %></h5>
             <p class="card-text"><%= simple_format(@article.description) %></p>
-            <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-outline-info" %>
-            <%= link_to 'Delete', article_path(@article), method: :delete, data: { confirm: "Are you sure?"}, class: "btn btn-outline-danger" %>
+            <% if logged_in? && current_user == @article.user %>
+              <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-outline-info" %>
+              <%= link_to 'Delete', article_path(@article), method: :delete, data: { confirm: "Are you sure?"}, class: "btn btn-outline-danger" %>
+            <% end %>
           </div>
         </div>
       </div>
