--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,8 +18,10 @@
               </h5>
               <p class="card-text"><%= pluralize(user.articles.count,"article") %></p>
               <%= link_to 'View Profile', user, class: "btn btn-outline-success" %>
+              <% if logged_in? && (current_user == user || current_user.admin?) %>
               <%= link_to 'Edit Profile', edit_user_path(user), class: "btn btn-outline-info" %>
-              <% if logged_in? and current_user.admin? %>
+              <% end %>
+              <% if logged_in? && current_user.admin? %>
                   <%= link_to 'Delete User', user_path(user), method: :delete, class: "btn btn-outline-info",
                       data: {confirm: "Are you sure you want to delete  the user and all their articles?"} %>
               <% end %>
