--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,1 +1,11 @@
-<h1 class="text-center mt-4"> Create new category </h1>
+<h1 class="text-center mt-6"> <%= "Category: " + @category.name %> </h1>
+
+  <div class="apple_pagination">
+    <%= will_paginate @category_articles, :container => false %>
+  </div>
+
+  <%= render 'articles/article', obj: @category_articles %>
+
+  <div class="apple_pagination mb-4">
+    <%= will_paginate @category_articles, :container => false %>
+  </div>
