--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -3,6 +3,7 @@
   <div class="row justify-content-center">
     <div class="col-10">
       <%= form_with(model: @article,class: "shadow p-3 mb-3 bg-dark rounded", local: true) do |f| %>
+
       <div class="form-group row">
         <%= f.label :title, class: "col-2 col-form-label text-light" %> <br/>
         <div class="col-10">
@@ -14,6 +15,15 @@
         <%= f.label :description, class: "col-2 col-form-label text-light" %> <br/>
         <div class="col-10">
           <%= f.text_area :description, rows:10, class: "form-control shadow rounded", placeholder: "Description of article" %>
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <%= f.label :categories, class: "col-2 col-form-label text-light" %> <br/>
+        <div class="col-10 text-light">
+          <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |cb| %>
+            <% cb.label(class: "checkbox-inline input_checkbox") {cb.check_box(class: "checkbox") + cb.text}%>
+          <% end %>
         </div>
       </div>
 
