--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -11,6 +11,11 @@
           <div class="card-body">
             <h5 class="card-title"><%= @article.title %></h5>
             <p class="card-text"><%= simple_format(@article.description) %></p>
+              <% if @article.categories.any? %>
+              <p class="card-text">
+                Categories : <%= render @article.categories  %>
+              </p>
+              <% end %>
             <% if logged_in? && (current_user == @article.user || current_user.admin?) %>
               <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-outline-info" %>
               <%= link_to 'Delete', article_path(@article), method: :delete, data: { confirm: "Are you sure?"}, class: "btn btn-outline-danger" %>
