--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -13,6 +13,7 @@
               <h5 class="card-title">
                 <%= link_to category.name, category_path(category) %>
               </h5>
+              <small><%= pluralize(category.articles.count, "articles") %></small>
             </div>
           </div>
         </div>
