--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
 </div>
 <h3 class="text-center mt-4">Articles </h3>
 
-<%= render 'articles/article' %>
+<%= render 'articles/article', obj: @articles %>
 
 <div class="apple_pagination mb-4">
   <%= will_paginate @articles, :container => false %>
