--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -60,7 +60,7 @@
           <%= link_to current_user.username, user_path(current_user), class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Logout', logout_path, class: "nav-link", method: :delete %>
+          <%= link_to 'sign_out', destroy_user_session_path, class: "nav-link", method: :delete %>
         </li>
       <% else %>
         <li class="nav-item">
