--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,7 +10,6 @@
         <%= link_to 'Bloggers', users_path, class:"nav-link" %>
       </li>
 
-      <% if logged_in? %>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Articles
@@ -22,7 +21,6 @@
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </li>
-      <% end %>
 
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -33,43 +31,35 @@
           <% Category.all.each do |category| %>
             <%= link_to "#{category.name}", category_path(category), class: "dropdown-item" %>
           <%  end %>
-          <% if logged_in? and current_user.admin? %>
             <div class="dropdown-divider"></div>
             <%= link_to 'Create new Category', new_category_path, class:"dropdown-item" %>
-          <% end %>
         </div>
       </li>
 
-
-      <% if logged_in? %>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Your Profile <%= "Admin" if current_user.admin? %>
+            Your Profile
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <%= link_to 'Edit your profile', edit_user_path(current_user), class:"dropdown-item" %>
-            <%= link_to 'View your profile', user_path(current_user), class: "dropdown-item" %>
+            <%= link_to 'Edit your profile', class:"dropdown-item" %>
+            <%= link_to 'View your profile', class: "dropdown-item" %>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </li>
-      <% end %>
 
-      <% if logged_in? %>
+
         <li class="nav-item">
-          <%= link_to current_user.username, user_path(current_user), class: "nav-link" %>
+          <%= link_to t(".sign_out"), destroy_user_session_path, class: "nav-link", method: :delete %>
+        </li>
+
+        <li class="nav-item">
+          <%= link_to t(".sign_in"), new_session_path(resource_name) %><br />
         </li>
         <li class="nav-item">
-          <%= link_to 'sign_out', destroy_user_session_path, class: "nav-link", method: :delete %>
+          <%= link_to t(".sign_up"), new_registration_path(resource_name) %>
         </li>
-      <% else %>
-        <li class="nav-item">
-          <%= link_to 'Login', login_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to 'Sign up', signup_path, class: "nav-link" %>
-        </li>
-      <% end %>
+
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
