--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -41,8 +41,12 @@
             Your Profile
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <%= link_to 'Edit your profile', class:"dropdown-item" %>
-            <%= link_to 'View your profile', class: "dropdown-item" %>
+            <% if current_user %>
+                    <%= link_to 'Edit your Profile',edit_user_registration_path, class:"dropdown-item"  %>
+                    <%= link_to 'Logout', destroy_user_session_path, method: :delete, class:"dropdown-item"  %>
+                <% else %>
+                    <%= link_to 'Login', new_user_session_path %>
+            <% end %>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
@@ -50,14 +54,14 @@
 
 
         <li class="nav-item">
-          <%= link_to t(".sign_out"), destroy_user_session_path, class: "nav-link", method: :delete %>
+          <%= link_to 'Sign_out', destroy_user_session_path, class: "nav-link", method: :delete %>
         </li>
 
         <li class="nav-item">
-          <%= link_to t(".sign_in"), new_session_path(resource_name) %><br />
+          <%= link_to 'Login', new_user_session_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to t(".sign_up"), new_registration_path(resource_name) %>
+          <%= link_to 'Sign_up', new_user_registration_path, class: "nav-link" %>
         </li>
 
     </ul>
