--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -35,35 +35,32 @@
             <%= link_to 'Create new Category', new_category_path, class:"dropdown-item" %>
         </div>
       </li>
-
+    <% if current_user %>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Your Profile
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <% if current_user %>
-                    <%= link_to 'Edit your Profile',edit_user_registration_path, class:"dropdown-item"  %>
-                    <%= link_to 'Logout', destroy_user_session_path, method: :delete, class:"dropdown-item"  %>
-                <% else %>
-                    <%= link_to 'Login', new_user_session_path %>
-            <% end %>
+
+            <%= link_to 'Edit your Profile',edit_user_registration_path, class:"dropdown-item"  %>
+            <%= link_to 'View your Profile',users_path, class:"dropdown-item"  %>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </li>
-
-
+    <% end %>
+      <% if user_signed_in? %>
         <li class="nav-item">
-          <%= link_to 'Sign_out', destroy_user_session_path, class: "nav-link", method: :delete %>
+          <%= link_to 'Sign out', destroy_user_session_path, class: "nav-link", method: :delete %>
         </li>
-
+      <% else %>
         <li class="nav-item">
           <%= link_to 'Login', new_user_session_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Sign_up', new_user_registration_path, class: "nav-link" %>
+          <%= link_to 'Sign up', new_user_registration_path, class: "nav-link" %>
         </li>
-
+      <% end %>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
