--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,13 +17,12 @@
                 <%= link_to gravatar_for(user, size: 200), user %>
               </h5>
               <p class="card-text"><%= pluralize(user.articles.count,"article") %></p>
-              <%= link_to 'View Profile', user, class: "btn btn-outline-success" %>
               <% if user_signed_in? %>
-              <%= link_to 'Edit Profile', edit_user_registration_path, class: "btn btn-outline-info" %>
-              <%= link_to 'Delete User', users_path, method: :delete, class: "btn btn-outline-info",
-                      data: {confirm: "Are you sure you want to delete  the user and all their articles?"} %>
+                <%= link_to 'View Profile', user_path(user), class: "btn btn-outline-success" %>
+                <%= link_to 'Edit Profile', edit_user_path(user), class: "btn btn-outline-info" %>
+                <%= link_to 'Delete User', users_path, method: :delete, class: "btn btn-outline-info",
+                        data: {confirm: "Are you sure you want to delete  the user and all their articles?"} %>
               <% end %>
-
             </div>
           </div>
         </div>
