--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -15,8 +15,12 @@
                 <p>Categories: <%= render article.categories %></p>
               <% end %>
                 <%= link_to 'View', article_path(article), class: "btn btn-outline-success" %>
+                <% if can? :update, article %>
                 <%= link_to 'Edit', edit_article_path(article), class: "btn btn-outline-info" %>
+                <% end %>
+                <% if can? :destroy, article %>
                 <%= link_to 'Delete', article_path(article), method: :delete, data: { confirm: "Are you sure?"}, class: "btn btn-outline-danger" %>
+                <% end %>
             </div>
           </div>
         </div>
