--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -16,8 +16,12 @@
                 Categories : <%= render @article.categories  %>
               </p>
               <% end %>
+              <% if can? :update, @article %>
               <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-outline-info" %>
+              <% end %>
+              <% if can? :destroy, @article %>
               <%= link_to 'Delete', article_path(@article), method: :delete, data: { confirm: "Are you sure?"}, class: "btn btn-outline-danger" %>
+              <% end %>
           </div>
         </div>
       </div>
