--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,8 +1,9 @@
 <h1 class="text-center mt-6"> <%= "Category: " + @category.name %> </h1>
-
+  <% if can? :update, @category %>
     <div class="text-center">
       <span class="badge"><%= link_to 'Edit category Name', edit_category_path(@category) %> </span>
     </div>
+  <% end %>
 
   <div class="apple_pagination">
     <%= will_paginate @category_articles, :container => false %>
