--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,6 +10,7 @@
         <%= link_to 'Bloggers', users_path, class:"nav-link" %>
       </li>
 
+      <% if user_signed_in? %>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Articles
@@ -21,6 +22,8 @@
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </li>
+      <% end %>
+
 
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -31,17 +34,19 @@
           <% Category.all.each do |category| %>
             <%= link_to "#{category.name}", category_path(category), class: "dropdown-item" %>
           <%  end %>
+          <% if can? :create, Category %>
             <div class="dropdown-divider"></div>
             <%= link_to 'Create new Category', new_category_path, class:"dropdown-item" %>
+            <% end %>
         </div>
       </li>
-    <% if current_user %>
+
+    <% if user_signed_in? %>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Your Profile
+            Your Profile <%= "Admin" if current_user.admin? %>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-
             <%= link_to 'Edit your Profile',edit_user_registration_path, class:"dropdown-item"  %>
             <%= link_to 'View your Profile',user_path(current_user), class:"dropdown-item"  %>
             <div class="dropdown-divider"></div>
@@ -49,7 +54,11 @@
           </div>
         </li>
     <% end %>
+
       <% if user_signed_in? %>
+        <li class="nav-item">
+          <%= link_to current_user.username, user_path(current_user), class: "nav-link" %>
+        </li>
         <li class="nav-item">
           <%= link_to 'Sign out', destroy_user_session_path, class: "nav-link", method: :delete %>
         </li>
