--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -22,7 +22,7 @@
                 <%= link_to 'Edit Profile', edit_user_path(user), class: "btn btn-outline-info" %>
                 <% end %>
                 <% if user_signed_in? && current_user.admin? %>
-                <%= link_to 'Delete User', users_path, method: :delete, class: "btn btn-outline-info",
+                <%= link_to 'Delete User', user_path(user), method: :delete, class: "btn btn-outline-info",
                         data: {confirm: "Are you sure you want to delete  the user and all their articles?"} %>
                 <% end %>
 
