--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,10 +5,11 @@
 </div>
 
 <%= gravatar_for @user, size: 200 %>
-
+<% if user_signed_in? && (current_user == @user || current_user.admin?)  %>
 <div class="text-center mt-4">
   <%= link_to "Edit your profile", edit_user_path(@user), class: "btn btn-outline-info" %>
 </div>
+<% end %>
 <h3 class="text-center mt-4">Articles </h3>
 
 <%= render 'articles/article', obj: @articles %>
